--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -20,7 +20,7 @@ Contacts  Email: admin@vince.pub Comment: https://i.vince.pub/comment/ (Gitalk) 
 <meta property="og:description" content="WHO AM I I&rsquo;m Vince Ying with the ID vinceying. You may know me from GitHub / Zhihu or other places. Yes, those are also me. If you like to know more about me, please look here.
 Contacts  Email: admin@vince.pub Comment: https://i.vince.pub/comment/ (Gitalk)  Landing Page Built with ♥ and Hugo. Theme by Hugo-coder. Coded by Vince Ying." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://www.example.com/contact/" />
+<meta property="og:url" content="http://www.vince.pub/contact/" />
 
 
 
@@ -29,7 +29,7 @@ Contacts  Email: admin@vince.pub Comment: https://i.vince.pub/comment/ (Gitalk) 
 </title>
 
     
-      <link rel="canonical" href="http://www.example.com/contact/">
+      <link rel="canonical" href="http://www.vince.pub/contact/">
     
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
