--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Pages" />
 <meta property="og:description" content="Menu  Cloud Blog File Status Legacy Onedrive  " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://www.example.com/pages/" />
+<meta property="og:url" content="http://www.vince.pub/pages/" />
 
 
 
@@ -26,7 +26,7 @@
 </title>
 
     
-      <link rel="canonical" href="http://www.example.com/pages/">
+      <link rel="canonical" href="http://www.vince.pub/pages/">
     
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
