--- a/public/snippets/first/index.html
+++ b/public/snippets/first/index.html
@@ -20,7 +20,7 @@ pwd "/>
 <meta property="og:description" content="This content is in snippets/first/index.md
 pwd " />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://www.example.com/snippets/first/" />
+<meta property="og:url" content="http://www.vince.pub/snippets/first/" />
 
 
 
@@ -29,7 +29,7 @@ pwd " />
 </title>
 
     
-      <link rel="canonical" href="http://www.example.com/snippets/first/">
+      <link rel="canonical" href="http://www.vince.pub/snippets/first/">
     
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
