--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
     <meta property="og:title" content="Vince" />
 <meta property="og:description" content="Vince&#39;s personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://www.example.com/" />
+<meta property="og:url" content="http://www.vince.pub/" />
 
 
 
     <title>Vince</title>
 
     
-      <link rel="canonical" href="http://www.example.com/">
+      <link rel="canonical" href="http://www.vince.pub/">
     
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700%7CMerriweather:300,700%7CSource+Code+Pro:400,700&display=swap" rel="stylesheet">
